# ibm-watsonx-governance-bridge

./: .gitignore  .release-notes.md  CHANGELOG.md  README.md  SECURITY.md  function_app.py  local.settings.json.example  pyproject.toml
.github/workflows/: ci.yml  pages.yml  scorecard.yml
docs/: KINETIC_GAIN_EMBEDDED.md
examples/: policy-bundle.json
infra/: code-engine.yaml
site/: CNAME  index.html  robots.txt  sitemap.xml
site/assets/: styles.css
site/docs/: index.html
site/verification/: index.html
src/ibm_watsonx_governance_bridge/: __init__.py  audit.py  bridge.py  broker.py  models.py  upstream.py
tests/: test_bridge.py  test_http.py
