[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ibm-watsonx-governance-bridge"
version = "0.1.0"
description = "Python edge bridge that gates IBM watsonx.ai chat and text-generation calls through deny-trumps-allow PolicyBundles derived from AI Procurement Decision Cards. Adds x-kg-correlation-id and emits tool_invocation_* events to audit-stream-py."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "Miz Causevic", email = "miz@kineticgain.com" }]
keywords = [
    "ibm", "watsonx", "ai-governance", "python",
    "policybundle", "decision-card", "enterprise-ai", "platform-engineering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "flask>=3.0",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://watsonx.kineticgain.com/"
Repository = "https://github.com/mizcausevic-dev/ibm-watsonx-governance-bridge"
"Sibling (Azure)" = "https://github.com/mizcausevic-dev/azure-openai-governance-bridge"
"Sibling (MCP)" = "https://github.com/mizcausevic-dev/mcp-permission-broker"

[tool.hatch.build.targets.wheel]
packages = ["src/ibm_watsonx_governance_bridge"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
strict = true
ignore_missing_imports = true
